--- a/api-allv2/templates/index.html
+++ b/api-allv2/templates/index.html
@@ -15,7 +15,7 @@
 <body>
 <header class="page-header">
     <div class="header__wrapper clearfix">
-        <h1 class="logo" >Termitup <a href="index.html"></a> <img src="../static/images/termitup_logo.svg" class="logo"></h1>
+        <h1 class="logo" >Termitup <a href="index.html"></a> <img src="../static/images/termitup_logo_oeg.svg" class="logo"></h1>
                          <!--<h2 class="menu__title"><a href="javascript:void(0);" onclick="myFunction()">☰</a></h2>!-->
             <h2 class="subtitle">A wonderful service for terminology enrichment</h2>
 
@@ -59,7 +59,7 @@
         <div class="intro-services__wrapper ">
         <h3 class="about__title">API</h3>
         <div class="about__text">
-        <p>Test this service through <a href="http://termitup.oeg.fi.upm.es/swagger" class="apilink" target="_blank">TermitUp Swagger API</a>.</p>
+        <p>Test this service through <a href="http://termitup.oeg.fi.upm.net/swagger/" class="apilink" target="_blank">TermitUp Swagger API </a>[WORK IN PROGRESS].</p>
         </div>
         </div>
     </section>
@@ -68,7 +68,8 @@
         <h3 class="contact__title">Contact</h3>
         <div class="contact__text">
         <p>This work has been developed by <a href="https://oeg.fi.upm.es/" class="oegweb" target="_blank">Ontology Engineering Group</a> (Universidad Politécnica de Madrid) as part of the PhD. thesis of Patricia Martín-Chozas. For more information, send an email to pmchozas@fi.upm.es</p>
-        <p>This service is being developed within Prêt-a-Llod H2020 project (grant agreement No. 825182)</p>
+        <p>This service is being developed within Prêt-à-Llod H2020 project (grant agreement No. 825182)</p>
+        <p>Code is availabe at <a href="https://github.com/Pret-a-LLOD/termitup" class="oegweb" target="_blank">Prêt-à-Llod Github repository</a>.</p>
         </div>
         </div>
     </section>
