--- a/api-allv2/templates/index.html
+++ b/api-allv2/templates/index.html
@@ -5,7 +5,8 @@
 
     <meta name="viewport" content="width=devide-width, initial-scale=1.0">  <!-- para dispositivos móviles !-->
     <title>TermitUp</title>
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
      
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='reset.css') }}">
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style.css') }}">
