--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     <div class="header__wrapper clearfix">
         <h1 class="logo" >Termitup <a href="index.html"></a> <img src="../static/images/termitup_logo_oeg.svg" class="logo"></h1>
                          <!--<h2 class="menu__title"><a href="javascript:void(0);" onclick="myFunction()">☰</a></h2>!-->
-            <h2 class="subtitle">A wonderful service for terminology enrichment</h2>
+            <h2 class="subtitle">Set of terminology-related services</h2>
 
             <ul id="navbar" class="menu__list">
                 <li><a href="#about" class="header-menu__item">About TermitUp</a></li>
@@ -49,7 +49,7 @@
 
                 <p>TermitUp builds sense indicators for both the source and the candidate terms, and performs a Word Sense Disambiguation process (with Semantic Web Company's service), matching those concepts with the closest domain. From the concepts matched in the external resources, TermitUp retrieves every piece of information available (translations, synonyms, definitions and terminological relations), already disambiguated, and enriches the source term lists, creating links amongst the resources in the LLOD.</p>
 
-                <p>Afterwards, TermitUp offers the possibility of creating hierarchical relations amongst the terms in the source list and also of validating the synonymy relations retrieved from the external resources. Finally, the results are published in separate json-ld files, modeled in SKOS-XL, that permits keeping the provenance of specific pieces of the data retrieved.</p>
+                <p>Afterwards, TermitUp offers the possibility of creating hierarchical relations amongst the terms in the source list and also of validating the synonymy relations retrieved from the external resources. Finally, the results are published in RDF, following SKOS and Ontolex model.</p>
 
                 <img src="../static/images/termitupw.png" class="termitup">
         </div>
