--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
         <div class="intro-services__wrapper ">
         <h3 class="about__title">API</h3>
         <div class="about__text">
-        <p>Test this service through <a href="http://termitup.oeg.fi.upm.net/swagger/" class="apilink" target="_blank">TermitUp Swagger API </a>[WORK IN PROGRESS].</p>
+        <p>Test this service through <a href="http://termitup.oeg.fi.upm.net/swagger/" class="apilink" target="_blank">TermitUp Swagger API </a>.</p>
         </div>
         </div>
     </section>
