small changes in website

--- a/templates/index_local.html
+++ b/templates/index_local.html
@@ -5,9 +5,7 @@
 
     <meta name="viewport" content="width=devide-width, initial-scale=1.0">  <!-- para dispositivos móviles !-->
     <title>TermitUp</title>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;600&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
         <link rel= "stylesheet" type= "text/css" href= "../static/reset.css">
         <link rel= "stylesheet" type= "text/css" href= "../static/style.css">
         <link rel= "stylesheet" type= "text/css" href= "../static/fontello.css">
@@ -65,7 +63,7 @@
         <div class="intro-services__wrapper ">
         <h3 class="about__title">API</h3>
         <div class="about__text">
-        <p>Test this service through <a href="http://termitup.oeg.fi.upm.net/swagger/" class="apilink" target="_blank">TermitUp Swagger API </a>[WORK IN PROGRESS].</p>
+        <p>Test this service through <a href="http://termitup.oeg.fi.upm.net/swagger/" class="apilink" target="_blank">TermitUp Swagger API </a>.</p>
         </div>
         </div>
     </section>
