--- a/static/style.css
+++ b/static/style.css
@@ -50,15 +50,27 @@ body {
 height: inherit;
 }
 
-.logo2, .logo3, .logo4, .logo5 {
-    max-width: 6rem;
-    text-indent: -9000px;
-    margin-left: auto;
-    margin-right: auto;
-    
-    
+
+
+.logo2, .logo3, .logo4 {
+
+    margin-right: 0.7rem;
 
 }
+
+.logo2, .logo3, .logo4, .logo5 {
+    max-width: 4.5rem;
+    text-indent: -9000px;
+
+}
+
+.logo4 {
+
+    max-width: 3.5rem;
+    
+}
+
+
 .container {
 } 
 
@@ -90,7 +102,7 @@ height: inherit;
   background-color: #FFFFFF;
   text-align: center;
   width: 100%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
 
@@ -99,11 +111,11 @@ height: inherit;
 ul li {
     /* float: left; */
     display: inline-block;
-    padding: 0.5rem; 
-    color:#2774AE;
+    padding: 0.3rem; 
+    color:#0D5F82;
 
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1rem;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.2rem;
     margin-right: 0.5rem;
 }
 
@@ -166,9 +178,9 @@ color: #2F4F4F;
 .subtitle {
     display: block;
     line-height: 1.5;
-    color:black;
+    color: #708090;
     text-align: center; 
-    font-family: "Montserrat";
+    font-family: "Poppins";
     font-weight: 300;
     padding-bottom: 0.5rem;
 }
@@ -287,7 +299,7 @@ color: #2F4F4F;
     display: inline-block; 
     padding: 1rem; 
     margin: 0.5rem;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: 600;
     font-size: 1rem;
     line-height: 1.6rem;
@@ -348,7 +360,7 @@ color: #2F4F4F;
     
 
 .intro__title, .contact__title, .about__title {
-    font-family:'Montserrat';
+    font-family:'Poppins';
     font-size: 2rem;
     color:#2774AE ;
     padding-bottom: 1rem;
@@ -374,8 +386,8 @@ color: #2F4F4F;
 .intro__text, .about__text, .contact__text {
     display: block;
     line-height: 1.5;
-    font-family: 'Montserrat';
-    color:black;
+    font-family: 'Poppins';
+    color: #708090;
     padding-top: 0.5rem;
     text-align: justify;
 
@@ -478,7 +490,7 @@ p {
     display: block;
     position: relative;
     
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
     background-color: rgba(248,248,255 0.5);
     
     padding:2rem;
@@ -573,7 +585,7 @@ transform:scale(1.2);
     width: 100%;
     max-width: 1000px;
     margin: 0 auto;  
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
     text-align: center;
 
     background-color: rgba(255,255,255, 0.6);
@@ -597,7 +609,7 @@ transform:scale(1.2);
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.2rem;
     line-height: 1.5;
     margin-top: 0.5rem;
@@ -605,7 +617,7 @@ transform:scale(1.2);
 }
 
 .wpcf7-submit {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
     padding: 0.2rem 3rem;
     font-size: 1rem;
     text-align: center;
@@ -623,7 +635,7 @@ transform:scale(1.2);
 }
 
 .wpcf7-text, .wpcf7-textarea {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: #c0c0c0;
     font-size: 1rem;
 }
