--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>TermitUp</title>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
      
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='reset.css') }}">
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style.css') }}">
