--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,7 @@
 
     <meta name="viewport" content="width=devide-width, initial-scale=1.0">  <!-- para dispositivos móviles !-->
     <title>TermitUp</title>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
      
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='reset.css') }}">
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style.css') }}">
