--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
         <div class="intro-services__wrapper ">
         <h3 class="about__title">API</h3>
         <div class="about__text">
-        <p>Test this service through <a href="http://termitup.oeg.fi.upm.net/swagger/" class="apilink" target="_blank">TermitUp Swagger API </a>.</p>
+        <p>Test this service through <a href="http://termitup.oeg.fi.upm.es/swagger/" class="apilink" target="_blank">TermitUp Swagger API </a>.</p>
         </div>
         </div>
     </section>
