--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
             <ul id="navbar" class="menu__list">
                 <li><a href="#about" class="header-menu__item">About TermitUp</a></li>
                 <li><a href="#api" class="header-menu__item">API</a></li>
+                <li><a href="#sparql" class="header-menu__item">SPARQL Endpoint</a></li>
                 <li><a href="#thanks" class="header-menu__item">Contact</a></li>
                 
                 
@@ -52,9 +53,9 @@
 
                 <p>Afterwards, TermitUp offers the possibility of creating hierarchical relations amongst the terms in the source list and also of validating the synonymy relations retrieved from the external resources, by applying linguistic patterns and additional language resources. Finally, the results are published in separate json-ld files, modeled in SKOS and Ontolex (users' choice).</p>
 
-                <p>Finally, TermitUp API offers a publication module that relies on Terminoteca RDF, where the previously generated JSON-LD files can be stored and freely queried.</p>
-
+                <p>Finally, TermitUp API publishes the enriched terminologies generated in a Virtuoso Enpoint, where they can be freely queried.</p>
                 
+                <p class="arch"><img src="../static/images/termitup_arch.png" class="arch_pic"></p>
         </div>
         </div> 
     
@@ -64,6 +65,14 @@
         <h3 class="about__title">API</h3>
         <div class="about__text">
         <p>Test this service through <a href="http://termitup.oeg.fi.upm.es/swagger/" class="apilink" target="_blank">TermitUp Swagger API </a>.</p>
+        </div>
+        </div>
+    </section>
+    <section id="sparql" class="sparql">
+        <div class="intro-services__wrapper ">
+        <h3 class="about__title">TermitUp SPARQL Endpoint</h3>
+        <div class="about__text">
+        <p>Access to the generated enriched terminologies through <a href="http://termitup.oeg.fi.upm.es/sparql/" class="sparqllink" target="_blank">TermitUp SPARQL Endpoint </a>.</p>
         </div>
         </div>
     </section>
