--- a/templates/index_local.html
+++ b/templates/index_local.html
@@ -21,6 +21,7 @@
             <ul id="navbar" class="menu__list">
                 <li><a href="#about" class="header-menu__item">About TermitUp</a></li>
                 <li><a href="#api" class="header-menu__item">API</a></li>
+                <li><a href="#sparql" class="header-menu__item">SPARQL Endpoint</a></li>
                 <li><a href="#thanks" class="header-menu__item">Contact</a></li>
                 
                 
@@ -54,6 +55,8 @@
 
                 <p>Finally, TermitUp API offers a publication module that relies on Terminoteca RDF, where the previously generated JSON-LD files can be stored and freely queried.</p>
 
+               <p class="arch"><img src="../static/images/termitup_arch.png" class="arch_pic"></p>
+
                
         </div>
         </div> 
@@ -64,6 +67,14 @@
         <h3 class="about__title">API</h3>
         <div class="about__text">
         <p>Test this service through <a href="http://termitup.oeg.fi.upm.net/swagger/" class="apilink" target="_blank">TermitUp Swagger API </a>.</p>
+        </div>
+        </div>
+    </section>
+    <section id="sparql" class="sparql">
+        <div class="intro-services__wrapper ">
+        <h3 class="about__title">TermitUp SPARQL Endpoint</h3>
+        <div class="about__text">
+        <p>Access to the generated enriched terminologies through <a href="http://termitup.oeg.fi.upm.es/sparql/" class="sparqllink" target="_blank">TermitUp SPARQL Endpoint </a>.</p>
         </div>
         </div>
     </section>
