minor modification index

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,8 @@
                 <p>Afterwards, TermitUp offers the possibility of creating hierarchical relations amongst the terms in the source list and also of validating the synonymy relations retrieved from the external resources, by applying linguistic patterns and additional language resources. Finally, the results are published in separate json-ld files, modeled in SKOS and Ontolex (users' choice).</p>
 
                 <p>Finally, TermitUp API publishes the enriched terminologies generated in a Virtuoso Enpoint, where they can be freely queried.</p>
+
+                <p>See TermitUp architecture below.</p>
                 
                 <p class="arch"><img src="../static/images/termitup_arch.png" class="arch_pic"></p>
         </div>
